src/app/contact/contact.component.css
/* Default styles for larger screens */
.contact-card {
  max-width: 700px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #27333f;
  border: 2px solid #b0caf063;
  padding: 70px 20px;
  border-radius: 8px;
  color: white;
  text-align: center;
  margin: 0 auto; /* Center the card horizontally */
}

.contact-title {
  font-size: 3.5rem;
  color: #ffffff;
}

.white-highlight {
  color: white;
}

h1 {
  font-size: 1.75rem;
  margin-bottom: 1.5rem;
  font-weight: bolder;
}

.contact-paragraph {
  font-size: 1.25rem;
  color: #8c98a3;
  line-height: 1.5rem;
  margin-bottom: 2rem;
  max-width: 600px;
}

.media-content {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-bottom: 2rem;
}

.media-icons {
  display: flex;
  justify-content: space-around;
  width: 35%;
}

.media-icon {
  font-size: 2rem;
}

.media-icons a {
  color: #adb5bd;
  margin-left: 10px;
  position: relative;
  text-decoration: none;
}

.media-icons a::after {
  content: '';
  position: absolute;
  width: 0;
  height: 2px;
  display: block;
  margin-top: 5px;
  right: 0;
  background: #00FF00;
  transition: width 0.3s ease, background-color 0.3s ease;
}

.media-icons a:hover::after {
  width: 100%;
  left: 0;
  background: #00FF00;
}

.media-icons a:hover,
.media-icons a:active {
  color: #f8f9fa;
}

/* Font Awesome Icons */
.fab,
.fas {
  font-size: 35px;
}

/* Responsive adjustments */
@media (max-width: 1024px) {
  .contact-card {
      padding: 50px 20px;
  }

  .contact-title {
      font-size: 2.5rem;
  }

  h1 {
      font-size: 1.5rem;
  }

  .contact-paragraph {
      font-size: 1.1rem;
  }

  .media-icons {
      width: 50%;
  }

  .fab,
  .fas {
      font-size: 30px;
  }
}

@media (max-width: 768px) {
  .contact-card {
      padding: 40px 15px;
  }

  .contact-title {
      font-size: 2rem;
  }

  h1 {
      font-size: 1.25rem;
  }

  .contact-paragraph {
      font-size: 1rem;
  }

  .media-icons {
      width: 60%;
  }

  .fab,
  .fas {
      font-size: 25px;
  }
}

@media (max-width: 480px) {
  .contact-card {
      padding: 30px 10px;
  }

  .contact-title {
      font-size: 1.75rem;
  }

  h1 {
      font-size: 1rem;
  }

  .contact-paragraph {
      font-size: 0.9rem;
  }

  .media-icons {
      width: 80%;
  }

  .fab,
  .fas {
      font-size: 20px;
  }

  img.img-fluid {
      width: 80%; /* Adjust image size for smaller screens */
      height: auto;
  }
}

